# finbot-ctf

./: .gitattributes  .gitignore  .stylelintrc.json  README.md  badge-card-preview.html  package.json  pyproject.toml  tailwind.config.js
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  question.yml  security.yml
.github/workflows/: add-files-changed-label.yml  add-last-active-label.yml  add-migrations-label.yml  issue-pr-labeler.yml  label-new-contributor.yml  manage_quality_labels.yml  test.yml
docker/: entrypoint.sh
docs/: ses-lockdown-investigation.md  testing.md
finbot/: config.py  logging_config.py  main.py
finbot/agents/: base.py  chat.py  orchestrator.py  runner.py
finbot/agents/specialized/: communication.py  fraud.py  invoice.py  onboarding.py  payments.py
finbot/apps/admin/: __init__.py  main.py
finbot/apps/ctf/: main.py
finbot/apps/web/: auth.py  routes.py
finbot/core/: error_handlers.py
finbot/core/analytics/: ctf_queries.py
finbot/core/auth/: csrf.py
finbot/core/data/: models.py  repositories.py
finbot/core/llm/: __init__.py  judge.py  openai_client.py
finbot/core/messaging/: events.py
finbot/core/websocket/: events.py  routes.py
finbot/ctf/definitions/: loader.py
finbot/ctf/detectors/: base.py  (+1 more)
finbot/guardrails/: __init__.py  base.py  registry.py
finbot/mcp/: __init__.py  factory.py  provider.py
finbot/tools/: __init__.py
scripts/: check_prerequisites.py  reload_challenges.py  seed_analytics.py  test_websocket.py
tests/: conftest.py
tests/unit/: conftest.py
(+163 files in other folders)
