[project]
name = "finbot-ctf"
version = "0.1.0"
description = "OWASP ASI - FinBot CTF Application"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.0",
    "cryptography>=46.0.2",
    "fastapi>=0.119.0",
    "fastmcp>=2.0.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "openai>=2.6.1",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.11.0",
    "pydantic[email]>=2.12.0",
    "python-dotenv>=1.1.1",
    "resend>=2.0.0",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.3",
    "redis>=7.0.0",
    "sqlalchemy>=2.0.44",
    "uvicorn[standard]>=0.37.0",
    "gunicorn>=21.2.0",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "httpx>=0.28.1",
    "isort>=7.0.0",
    "mypy>=1.18.2",
    "psutil>=7.1.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "pytest-html>=4.1.1",
    "pytest-timeout>=2.4.0",
    "pytest-xdist>=3.8.0",
    "gspread>=6.0.0",
    "google-auth>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
]

[tool.black]
line-length = 100
target-version = ['py313']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.setuptools.packages.find]
where = ["."]
include = ["finbot*"]